# ShaderCopilot

./: .gitignore
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/specs/001-shader-copilot-poc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/001-shader-copilot-poc/checklists/: completeness.md  requirements.md
.specify/templates/: plan-template.md
Agent/: .env.example  README.md  pyproject.toml
Agent/src/shader_copilot/: __init__.py
Agent/src/shader_copilot/graphs/: __init__.py
Agent/src/shader_copilot/graphs/base/: __init__.py  state.py
Agent/src/shader_copilot/graphs/shader_gen/: __init__.py  graph.py  nodes.py  state.py
Agent/src/shader_copilot/models/: __init__.py  config.py  entities.py  model_manager.py
Agent/src/shader_copilot/router/: __init__.py  router_agent.py
Agent/src/shader_copilot/server/: __init__.py  message_handler.py  messages.py  websocket_server.py
Agent/src/shader_copilot/session/: __init__.py  session_manager.py
Agent/src/shader_copilot/tools/: __init__.py  llm_tools.py  unity_tools.py
Agent/src/shader_copilot/utils/: __init__.py  image_utils.py
Agent/tests/: conftest.py
Agent/tests/contract/: test_websocket_protocol.py
Agent/tests/integration/: test_full_flow.py  test_image_shader_flow.py  test_shader_gen_flow.py  test_shader_iteration.py
Agent/tests/unit/: test_image_analysis.py  test_message_parsing.py  test_session_manager.py
Docs/: tools-reference.md  user-guide.md
UnityProject/ProjectSettings/: ProjectSettings.asset
(+21 files in other folders)
